--- a/KK_BecomeTrap/KK_BecomeTrap.csproj
+++ b/KK_BecomeTrap/KK_BecomeTrap.csproj
@@ -57,6 +57,7 @@
     </Reference>
     <Reference Include="Sideloader">
       <HintPath>..\..\..\..\Games\Koikatsu\BepInEx\Sideloader.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
