Split hooks into a separate class

--- a/KK_BecomeTrap/KK_BecomeTrap.csproj
+++ b/KK_BecomeTrap/KK_BecomeTrap.csproj
@@ -67,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BecomeTrap.cs" />
+    <Compile Include="BecomeTrap.Hooks.cs" />
     <Compile Include="BecomeTrapController.cs" />
     <Compile Include="BecomeTrapGui.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
