--- a/KKS_BecomeTrap/KKS_BecomeTrap.csproj
+++ b/KKS_BecomeTrap/KKS_BecomeTrap.csproj
@@ -126,15 +126,15 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BecomeTrap.cs" />
     <Compile Include="BecomeTrap.Hooks.cs" />
-    <Compile Include="BecomeTrapController.cs" />
-    <Compile Include="BecomeTrapGui.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+  <Import Project="..\Core_BecomeTrap\Core_BecomeTrap.projitems" Label="Shared" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\IllusionLibs.BepInEx.Harmony.2.5.4\build\IllusionLibs.BepInEx.Harmony.targets" Condition="Exists('..\packages\IllusionLibs.BepInEx.Harmony.2.5.4\build\IllusionLibs.BepInEx.Harmony.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
