--- a/KK_BecomeTrap/packages.config
+++ b/KK_BecomeTrap/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ExtensibleSaveFormat.Koikatu" version="14.1.0" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx" version="5.0.1.1" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.BepInEx.Harmony" version="2.0.0-beta2" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2" targetFramework="net35" developmentDependency="true" />
-  <package id="IllusionModdingAPI.KKAPI" version="1.11.1" targetFramework="net35" developmentDependency="true" />
+  <package id="ExtensibleSaveFormat.Koikatu" version="16.4.0" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx" version="5.4.15" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.Harmony" version="2.5.4" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.BepInEx.MonoMod" version="21.8.5.1" targetFramework="net35" />
+  <package id="IllusionLibs.Koikatu.Assembly-CSharp" version="2019.4.27.4" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.Koikatu.Assembly-CSharp-firstpass" version="2019.4.27.4" targetFramework="net35" />
+  <package id="IllusionLibs.Koikatu.UnityEngine" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionLibs.Koikatu.UnityEngine.UI" version="5.6.2.4" targetFramework="net35" developmentDependency="true" />
+  <package id="IllusionModdingAPI.KKAPI" version="1.29.1" targetFramework="net35" developmentDependency="true" />
+  <package id="KoikatuCompatibilityAnalyzer" version="1.0.1" targetFramework="net35" developmentDependency="true" />
 </packages>
